GitVersion1/objects/LastActivityObject__c.object
<CustomObject>
    <description>To be deleted after Last activity user story deployment</description>
    <fields>
        <fullName>LastActivityAccId__c</fullName>
        <label>LastActivityAccId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastActivityId__c</fullName>
        <label>LastActivityId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastActiviyType__c</fullName>
        <label>LastActiviyType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>LastActivityObject</label>
    <nameField>
        <label>LastActivityObject Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LastActivityObjects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>